<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">Saint-Petersburg</string>
    <string name="icon_weather_condition_description">Icon of weather condition</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="error_loading"> An error occurred while loading data. Try again</string>
    <string name="retry_loading">Retry</string>
    <string name="visibility">Visibility</string>
    <string name="weather_icon">Weather icon</string>
    <string name="feels_like">"Feels like "</string>
    <string name="mbar">" mbar"</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="city_name_hint">Enter city name</string>
    <string name="ok">OK</string>

</resources>